fix sidebar-overlay z-index

--- a/src/stylesheets/map.scss
+++ b/src/stylesheets/map.scss
@@ -1,10 +1,11 @@
 /* navy: #05102a;; dark grey: rgb(22, 22, 22),
 grey: rgb(44, 44, 44) , grey-text: #bbd;*/
 
-#map-wrapper, #map-container {
+#map-wrapper,
+#map-container {
   display: flex;
   flex-grow: 1;
-  width: 100%
+  width: 100%;
 }
 
 #map {
@@ -16,14 +17,11 @@ grey: rgb(44, 44, 44) , grey-text: #bbd;*/
   color: white;
   font-size: 13px;
   font-weight: bold;
-  text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
-@media (orientation: portrait) and (min-width: 900px), (orientation: landscape) and (min-height: 900px) {
+@media (orientation: portrait) and (min-width: 900px),
+  (orientation: landscape) and (min-height: 900px) {
   .map-label {
     font-size: 15px;
   }
@@ -54,7 +52,9 @@ grey: rgb(44, 44, 44) , grey-text: #bbd;*/
   opacity: 0;
 }
 
-.map-button:hover, .invisible:hover, .invisible:focus {
+.map-button:hover,
+.invisible:hover,
+.invisible:focus {
   background: rgba(33, 33, 33, 1);
   cursor: pointer;
   text-decoration: none;
@@ -77,7 +77,6 @@ grey: rgb(44, 44, 44) , grey-text: #bbd;*/
   right: 0px;
 }
 
-
 .map-selection-button {
   margin: 5px;
   padding: 0px;
@@ -88,7 +87,8 @@ grey: rgb(44, 44, 44) , grey-text: #bbd;*/
   /*opacity: 0.9;*/
 }
 
-.map-selection-button:hover, .map-selection-button:focus {
+.map-selection-button:hover,
+.map-selection-button:focus {
   opacity: 1;
 }
 
@@ -96,18 +96,9 @@ grey: rgb(44, 44, 44) , grey-text: #bbd;*/
   vertical-align: middle;
 }
 
-
 #svg-map-button {
   border-radius: 50%;
   margin: 0;
-}
-
-#zoom-buttons {
-  position: absolute;
-  z-index: 2;
-  right: 0;
-  bottom: 12px;
-  margin: 5px;
 }
 
 #dropdown {
@@ -135,7 +126,6 @@ grey: rgb(44, 44, 44) , grey-text: #bbd;*/
   justify-content: space-between;
   align-items: center;
   padding: 5px;
-
 }
 
 /* A lot of the following styles is copy-pasted from documentation of react-aria-menubutton */
@@ -155,8 +145,8 @@ grey: rgb(44, 44, 44) , grey-text: #bbd;*/
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-color: #EEE;
-  border: 1px solid #D5D5D5;
+  background-color: #eee;
+  border: 1px solid #d5d5d5;
   border-radius: 1px;
   font-weight: bold;
   padding: 6px;
@@ -164,7 +154,7 @@ grey: rgb(44, 44, 44) , grey-text: #bbd;*/
 }
 
 .menu-button-trigger::after {
-  content: "";
+  content: '';
   position: relative;
   top: 3px;
   border-color: currentColor transparent transparent;
@@ -175,16 +165,16 @@ grey: rgb(44, 44, 44) , grey-text: #bbd;*/
 .menu-button-trigger:hover,
 .menu-button-trigger:focus,
 .menu-button-trigger.is-open {
-  background-color: #DDD;
-  background-image: linear-gradient(#EEE, #DDD);
-  border-color: #CCC;
+  background-color: #ddd;
+  background-image: linear-gradient(#eee, #ddd);
+  border-color: #ccc;
 }
 
 .menu-button-trigger:active,
 .menu-button-trigger.is-open {
-  background-color: #DCDCDC;
+  background-color: #dcdcdc;
   background-image: none;
-  border-color: #B5B5B5;
+  border-color: #b5b5b5;
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -203,7 +193,7 @@ grey: rgb(44, 44, 44) , grey-text: #bbd;*/
 .menu-item {
   cursor: pointer;
   padding: 8px;
-  border-bottom: 1px solid #EEE;
+  border-bottom: 1px solid #eee;
 }
 
 .menu-item-wrapper:first-of-type .menu-item {
@@ -239,11 +229,10 @@ grey: rgb(44, 44, 44) , grey-text: #bbd;*/
   width: 60px;
   height: 17px;
   border: solid #333 1px;
-
 }
 
 .color-picker {
-  position:absolute;
+  position: absolute;
   margin-top: 48px;
   /*top: 20px;*/
 }
